compiler/testData/asJava/lightClasses/compilationErrors/EnumNameOverride.java
public enum EnumNameOverride /* EnumNameOverride*/ implements Bar {
  ;

  @org.jetbrains.annotations.NotNull()
  public static EnumNameOverride valueOf(@org.jetbrains.annotations.NotNull() java.lang.String) throws java.lang.IllegalArgumentException;//  valueOf(java.lang.String)

  @org.jetbrains.annotations.NotNull()
  public static EnumNameOverride[] values();//  values()

  private  EnumNameOverride();//  .ctor()

}